--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1 id="">知乎</h1>
 <h2 id="-1">点灯</h2>
-<p><a href="./jcrdxl.github.io/docs/1.html">私了</a></p>
+<p><a href="./docs/1.html">私了</a></p>
