--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1 id="">知乎</h1>
 <h2 id="-1">点灯</h2>
-<p><a href="./docs/1.html">私了</a></p>
+<p><a href="./docs/1.html">私了</a>
+<a href="./docs/2.html">最后的真相</a></p>
