--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1 id="">知乎</h1>
 <h2 id="-1">点灯</h2>
 <p><a href="./docs/1.html">私了</a>
-<a href="./docs/2.html">最后的真相</a></p>
+<a href="./docs/2.html">最后的真相</a>
+<a href="./docs/3.mht">活在真空里</a></p>
